test/typecheck/errors/bad-views23.boa
o: output sum of int;

v1: table[year: int][projectID: string][fileName: string] of temp:int;

r1: v1._row;

while (r1 >> 2) {
	o << 1;
}
